--- a/app/styles/components/_live.scss
+++ b/app/styles/components/_live.scss
@@ -12,6 +12,7 @@
   text-align: center;
 
   margin: ($layout-unit * 2) auto;
+  transform: translateX($layout-unit);
   width: 200px;
   height: 240px;
 
